@@ -10,8 +10,11 @@ Next Release
 - Added a --dry-run option to zodbpack.  Set it to force a dry run
   of packing.
 
-- Improved the efficiency of packing databases that are both broad
-  and deep.
+- Replaced the object traversal portion of the pack code with
+  a more efficient implementation using Python sets (instead of SQL).
+  The new code is much faster for packing databases with deeply
+  nested objects.
+
 
 1.5.0a1 (2010-10-21)
 --------------------
